Fixed progress bar gap, closes #88

--- a/CSS/Sketch/CSS/progress-bars.css
+++ b/CSS/Sketch/CSS/progress-bars.css
@@ -22,7 +22,7 @@
 .progressBar>*, [class*="ProgressBar"]>* {
 	content: '';
 	display: block;
-	height: 1.15em;
+	height: 100%;
 	position: absolute;
 	width: 33%;
 }
